trying to add attached image to firebase storage

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,10 @@ dependencies {
     //retrofit dependencies
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0' //to see what kind of data from database
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    //to see what kind of data from database
 
+    implementation 'com.google.firebase:firebase-storage:16.0.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
